force-app/main/default/objects/LLC_BI__Automated_Booking_Status__c/fields/LLC_BI__EAL_Id__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__EAL_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the External Application Lookup table</description>
    <label>External Application Lookup</label>
    <referenceTo>LLC_BI__External_Application_Lookup__c</referenceTo>
    <relationshipLabel>Automated Booking Statuses</relationshipLabel>
    <relationshipName>Automated_Booking_Statuses</relationshipName>
    <type>Lookup</type>
</CustomField>