force-app/main/default/objects/LLC_BI__Automated_Booking_Status__c/fields/LLC_BI__Parent__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Booking Status that was used in creating this Booking Status.</description>
    <label>Parent Booking Status</label>
    <referenceTo>LLC_BI__Automated_Booking_Status__c</referenceTo>
    <relationshipLabel>Child Statuses</relationshipLabel>
    <relationshipName>Child_Statuses</relationshipName>
    <type>Lookup</type>
</CustomField>