force-app/main/default/objects/LLC_BI__Automated_Booking_Status__c/fields/LLC_BI__Summary__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Summary__c</fullName>
    <description>Detailed overall status of the reserve or book request</description>
    <label>Summary</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>